--- a/Logokuma24062025/Logokuma24062025.csproj
+++ b/Logokuma24062025/Logokuma24062025.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{12BD6315-A873-47B3-BA38-63DE6983A017}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Logokuma24062025</RootNamespace>
-    <AssemblyName>Logokuma24062025</AssemblyName>
+    <RootNamespace>LogHataAnaliz</RootNamespace>
+    <AssemblyName>LogHataAnaliz</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -71,6 +71,7 @@
     <Compile Include="migros.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="rcguard.cs" />
     <Compile Include="yemeksepeti.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -83,6 +84,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
